--- a/Woo-ChapinFront/src/app/components/general/home/home.component.css
+++ b/Woo-ChapinFront/src/app/components/general/home/home.component.css
@@ -1,18 +1,32 @@
 
-
-
-    
 .container{
     background: white;
     -webkit-box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-    display: flex;
     justify-content: center;
     min-height: 100vh;
-    align-items: center;
     position: relative;
     z-index: 2;
     border-radius: 5px;
     margin-top: -30px;
 }
     
+h4{
+    color: #11346b;
+}
+.carousel-inner{
+    width: fit-content !important;
+}
+.card{
+    -webkit-box-shadow: 10px 0 10px 0 rgba(0,0,0,0.3);
+    box-shadow: 10px 0 10px 0 rgba(0,0,0,0.3);
+}
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    height: 100% !important;
+    width: 20% !important;
+}
+
+.carousel-control-next, .carousel-control-prev{
+    background: rgba(0,0,0,0.3);
+    width: 10% !important;
+}
