--- a/Woo-ChapinFront/src/app/components/general/home/home.component.html
+++ b/Woo-ChapinFront/src/app/components/general/home/home.component.html
@@ -1,7 +1,225 @@
 <app-carousel ></app-carousel>
 
 <section>
-    <div class="container  w-100">
-        
+    <div class="container pt-3 pb-3  w-100">
+        <div class="w-100 pb-3 pt-3 d-flex justify-content-center">
+            <div class="col-lg-4 text-center">
+                <h4>Tecnología</h4>
+            </div>
+            <div class="col-lg-4 text-center">
+                <h4>Gaming</h4>
+            </div>
+            <div class="col-lg-4 text-center">
+                <h4>Tu mejor opción</h4>
+            </div>
+        </div>
+        <div class="w-100 text-center">
+            <h2 style="color: #11346b;">Productos Más Vendidos</h2>
+        </div>
+            <div id="carouselExampleIndicators1" class="carousel m-0 slide w-100 row justify-content-center" data-ride="carousel">
+                <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row pt-2 pb-2">
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row pt-2 pb-2">
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>    
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                <div class="row pt-2 pb-2">
+                    <div class="card ml-4 p-2" style="width: 18rem;">
+                        <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card ml-4 p-2" style="width: 18rem;">
+                        <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div class="card ml-4 p-2" style="width: 18rem;">
+                        <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <div class="w-100 text-center">
+                <h2 style="color: #11346b;">Lo Más Nuevo</h2>
+            </div>
+                <div id="carouselExampleIndicators2" class="carousel m-0 slide w-100 row justify-content-center" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row pt-2 pb-2">
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row pt-2 pb-2">
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>    
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                            <div class="card ml-4 p-2" style="width: 18rem;">
+                                <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                    <div class="row pt-2 pb-2">
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card ml-4 p-2" style="width: 18rem;">
+                            <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                </div>
     </div>
 </section>
