--- a/Woo-ChapinFront/src/app/components/general/register/register.component.html
+++ b/Woo-ChapinFront/src/app/components/general/register/register.component.html
@@ -1,1 +1,99 @@
-<p>register works!</p>
+<app-carousel ></app-carousel>
+
+<section>
+    <div class="container pt-3 pb-3  w-100">
+        
+        <div class="login-root">
+            <div class="box-root  flex-direction--column" style="flex-grow: 1; width: 100%; position: relative">
+              <div class="loginbackground box-background--white padding-top--64" style="position: absolute; z-index: 2;">
+                <div class="loginbackground-gridContainer">
+                  <div class="box-root flex-flex" style="grid-area: top / start / 8 / end;">
+                    <div class="box-root" style="background-image: linear-gradient(white 0%, rgb(247, 250, 252) 33%); flex-grow: 1;">
+                    </div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 4 / 2 / auto / 5;">
+                    <div class="box-root box-divider--light-all-2 animationLeftRight tans3s" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 6 / start / auto / 2;">
+                    <div class="box-root box-background--blue800" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 7 / start / auto / 4;">
+                    <div class="box-root box-background--blue animationLeftRight" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 8 / 4 / auto / 6;">
+                    <div class="box-root box-background--gray100 animationLeftRight tans3s" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 2 / 15 / auto / end;">
+                    <div class="box-root box-background--cyan200 animationRightLeft tans4s" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 3 / 14 / auto / end;">
+                    <div class="box-root box-background--blue animationRightLeft" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 4 / 17 / auto / 20;">
+                    <div class="box-root box-background--gray100 animationRightLeft tans4s" style="flex-grow: 1;"></div>
+                  </div>
+                  <div class="box-root flex-flex" style="grid-area: 5 / 14 / auto / 17;">
+                    <div class="box-root box-divider--light-all-2 animationRightLeft tans3s" style="flex-grow: 1;"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9; position: relative">
+                <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
+                  <h1><a href="http://blog.stackfindover.com/" rel="dofollow"> Registrate</a></h1>
+                </div>
+                <div class="formbg-outer pb-2">
+                  <div class="formbg col-lg-9">
+                    <div class="formbg-inner padding-horizontal--48">
+                      
+                      <form id="stripe-login">
+                        <div class="row">
+                            <div class="field padding-bottom--24 col-lg-6 pr-2">
+                                <label for="email">Nombre:</label>
+                                <input type="email" name="email">
+                            </div>
+                            <div class="field padding-bottom--24 col-lg-6">
+                                <label for="email">Apellido:</label>
+                                <input type="email" name="email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="field padding-bottom--24 col-lg-6 pr-2">
+                                <label for="email">Teléfono:</label>
+                                <input type="email" name="email">
+                            </div>
+                            <div class="field padding-bottom--24 col-lg-6">
+                                <label for="email">email:</label>
+                                <input type="email" name="email">
+                            </div>
+                        </div>
+                        
+                        <div class="field padding-bottom--24">
+                            <label for="email">Username:</label>
+                            <input type="email" name="email">
+                        </div>
+                        <div class="field padding-bottom--24">
+                          <div class="grid--50-50">
+                            <label for="password">Password</label>
+                          </div>
+                          <input type="password" name="password">
+                        </div>
+                        <div class="field padding-bottom--24">
+                            <div class="grid--50-50">
+                              <label for="password">Confirma tu Password</label>
+                            </div>
+                            <input type="password" name="password">
+                        </div>    
+                        <div class="text-center">
+                            <input type="submit" name="submit" value="Continuar">              
+                        </div>
+                    </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        
+    </div>
+
+</section>
