--- a/Woo-ChapinFront/src/app/components/general/categorias/categorias.component.html
+++ b/Woo-ChapinFront/src/app/components/general/categorias/categorias.component.html
@@ -1,1 +1,38 @@
-<p>categorias works!</p>
+<app-carousel ></app-carousel>
+
+<section>
+    <div class="container pt-3 pb-3  w-100">
+        <div class="w-100 pb-3 pt-3 d-flex justify-content-center">
+            <div class="col-lg-4 text-center">
+                <h4>Tecnología</h4>
+            </div>
+            <div class="col-lg-4 text-center">
+                <h4>Gaming</h4>
+            </div>
+            <div class="col-lg-4 text-center">
+                <h4>Tu mejor opción</h4>
+            </div>
+        </div>
+        <div class="w-100 text-center pb-3">
+            <h2 style="color: #11346b;">Categorías</h2>
+        </div>
+        <div class="w-100 row m-0 justify-content-center">
+            <div class="col-lg-6 row justify-content-center">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                    <div class="card-body text-center">
+                      <h2 style="color: #11346b;" class="card-title">Categoria 1</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 row justify-content-center">
+                <div class="card" style="width: 20rem;">
+                    <img class="card-img-top" src="../../../../assets/carousel1.jpg" alt="Card image cap">
+                    <div class="card-body text-center">
+                      <h2 style="color: #11346b;" class="card-title">Categoría 2</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
