--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -30,5 +30,6 @@
           <a class="nav-link text-light" routerLink="cart">Carrito</a>
         </li>
       </ul>
+      <a style="font-size: 1.2rem; color: white;"><i class="fa fa-shopping-cart"></i> Q0.00</a>
     </div>
 </nav>
