--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="loader.isLoading | async" class="loader">
   <mat-progress-bar class="fix" mode="indeterminate"></mat-progress-bar>
 </div>
-<nav class="navbar navbar-expand-lg navbar"  [ngClass]="{'navTop':show, 'navFixed':showFixed}" (window:scroll)="changeClass()">
+<nav class="navbar navbar-expand-lg  navbar-light "  [ngClass]="{'navTop':show, 'navFixed':showFixed}" (window:scroll)="changeClass()">
     <a class="navbar-brand text-white">WooChapín</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+  
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -28,6 +29,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" routerLink="cart">Carrito</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="homeAdmin">Home Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="productAdmin">Productos Admin</a>
         </li>
       </ul>
       <a style="font-size: 1.2rem; color: white;"><i class="fa fa-shopping-cart"></i> Q0.00</a>
