se agrego maquetación de categorias y envios

--- a/Woo-ChapinFront/src/app/components/admin/categorias/cat-add/cat-add.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/categorias/cat-add/cat-add.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-prod-sidebar></app-prod-sidebar>
+    <app-cat-sidebar></app-cat-sidebar>
     <div class="container pb-3  w-100 pt-3">
         <div class="login-root">
             <div class="box-root  flex-direction--column" style="flex-grow: 1; width: 100%; position: relative">
@@ -37,7 +37,7 @@
               </div>
               <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9; position: relative">
                 <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
-                  <h1><a href="http://blog.stackfindover.com/" rel="dofollow"> Agregar Producto</a></h1>
+                  <h1><a href="http://blog.stackfindover.com/" rel="dofollow"> Agregar Categoría</a></h1>
                 </div>
                 <div class="formbg-outer pb-2">
                   <div class="formbg col-lg-9">
@@ -54,39 +54,15 @@
                           </div>
                         <div class="field padding-bottom--24">
                           <div class="grid--50-50">
-                            <label for="password">Descripción del producto</label>
+                            <label for="password">Descripción de la categoría</label>
                           </div>
                           <textarea required class="from-control"  name="password" id="password"></textarea>
                           <span class="alertForm" >Campo Obligatorio</span>
                         </div>
+                        
                         <div class="field padding-bottom--24">
                             <div class="grid--50-50">
-                              <label for="password2">Etiquetas:</label>
-                            </div>
-                            <input required type="password" name="passwordConfirm" id="passwordConfirm">
-                            <span class="alertForm">Campo Obligatorio</span>
-                        </div> 
-                        <div class="field padding-bottom--24">
-                            <div class="grid--50-50">
-                              <label for="password2">Stock:</label>
-                            </div>
-                            <input required type="password" name="passwordConfirm" id="passwordConfirm">
-                            <span class="alertForm">Campo Obligatorio</span>
-                        </div>    
-                        <div class="field padding-bottom--24">
-                            <div class="grid--50-50">
-                              <label for="password2">Categoría:</label>
-                            </div>
-                            <select class="form-control">
-                                <option>categoría 1</option>
-                                <option>categoría 2</option>
-                                <option>categoría 3</option>
-                            </select>
-                            <span class="alertForm">Campo Obligatorio</span>
-                        </div>  
-                        <div class="field padding-bottom--24">
-                            <div class="grid--50-50">
-                              <label for="password2">Imagen del producto:</label>
+                              <label for="password2">Imagen de la categoría:</label>
                             </div>
                             <input required type="file" name="passwordConfirm" id="passwordConfirm">
                             <span class="alertForm">Campo Obligatorio</span>
