--- a/Woo-ChapinFront/src/app/components/admin/productos/prod-sidebar/prod-sidebar.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/productos/prod-sidebar/prod-sidebar.component.html
@@ -7,11 +7,11 @@
                         <i class='fa fa-bars nav_icon'></i>  <span *ngIf="showName" [@enterAnimation]>Productos</span> 
                     </a>
                     <hr class="m-0">
-                    <a  class="nav_link p-4" routerLink="../productAdmin"> 
+                    <a  class="nav_link p-4" routerLink="../../productAdmin/register"> 
                         <i class='fa fa-product-hunt nav_icon'></i> <span *ngIf="showName" [@enterAnimation]>Productos Registrados</span> 
                     </a> 
                     <hr class="m-0">
-                    <a  class="nav_link p-4"> 
+                    <a  class="nav_link p-4" routerLink="../../productAdmin/add"> 
                         <i class='fa fa-plus-circle nav_icon'></i> <span *ngIf="showName" [@enterAnimation]>Agregar Producto</span> 
                     </a> 
                 </div>
