--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -34,7 +34,13 @@
           <a class="nav-link text-light" routerLink="homeAdmin">Home Admin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" routerLink="productAdmin">Productos Admin</a>
+          <a class="nav-link text-light" routerLink="productAdmin/register">Productos Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="categoria/register">Categorías Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="zones/register">Zonas de envío</a>
         </li>
       </ul>
       <a style="font-size: 1.2rem; color: white;"><i class="fa fa-shopping-cart"></i> Q0.00</a>
