--- a/Woo-ChapinFront/src/app/components/general/carrito/carrito.component.html
+++ b/Woo-ChapinFront/src/app/components/general/carrito/carrito.component.html
@@ -30,6 +30,9 @@
                 <div class="col-lg-2 text-center">
                     <h4>Total</h4>
                 </div>
+                <div class="col-lg-12 m-2">
+                  <hr>
+                </div>
                 <div class="w-100 row pb-2">
                     <div class="col-lg-6 text-center">
                         <div class="d-flex">
@@ -46,7 +49,7 @@
                         <span>200.00</span>
                     </div>
                     <div class="w-100">
-                        <hr>
+                        <hr class="m-2">
                         <div class="w-100 row" style="justify-content: flex-end;">
                             <div class="col-lg-2 text-center">
                                 <span>200.00</span>
