--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -42,6 +42,12 @@
         <li class="nav-item">
           <a class="nav-link text-light" routerLink="zones/register">Zonas de envío</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="pedidos/register">Pedidos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" routerLink="personalizar">Personalizar</a>
+        </li>
       </ul>
       <a style="font-size: 1.2rem; color: white;"><i class="fa fa-shopping-cart"></i> Q0.00</a>
     </div>
