--- a/Woo-ChapinFront/src/app/components/general/login/login.component.css
+++ b/Woo-ChapinFront/src/app/components/general/login/login.component.css
@@ -264,3 +264,8 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   -ms-transform: scale(0.95);
   transform: scale(0.95);
 }
+
+.alertForm{
+  font-size: 15px;
+  color: #F93154;
+}
