--- a/Woo-ChapinFront/src/app/components/admin/categorias/cat-add/cat-add.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/categorias/cat-add/cat-add.component.html
@@ -43,29 +43,28 @@
                   <div class="formbg col-lg-9">
                     <div class="formbg-inner padding-horizontal--48">
                       
-                      <form #register="ngForm"  id="stripe-login">
+                      <form #add="ngForm" (ngSubmit)="addCategoria(add)"  id="stripe-login">
                         
                         
                         
                         <div class="field padding-bottom--24">
-                            <label for="userName">Nombre:</label>
-                            <input required type="text"  name="userName" id="userName">
-                            <span class="alertForm">Campo Obligatorio</span>
+                            <label for="nameCategoria">Nombre:</label>
+                            <input required type="text" #nameCategoria="ngModel" [(ngModel)]="categoria.nameCategoria"  name="nameCategoria" id="nameCategoria">
+                            <span class="alertForm" *ngIf="!nameCategoria.valid && nameCategoria.touched">Campo Obligatorio</span>
                           </div>
                         <div class="field padding-bottom--24">
                           <div class="grid--50-50">
-                            <label for="password">Descripción de la categoría</label>
+                            <label for="descCategoria">Descripción de la categoría</label>
                           </div>
-                          <textarea required class="from-control"  name="password" id="password"></textarea>
-                          <span class="alertForm" >Campo Obligatorio</span>
+                          <textarea required class="from-control" required  #descCategoria="ngModel" [(ngModel)]="categoria.descCategoria" name="descCategoria" id="descCategoria"></textarea>
+                          <span class="alertForm" *ngIf="!descCategoria.valid && descCategoria.touched">Campo Obligatorio</span>
                         </div>
                         
                         <div class="field padding-bottom--24">
                             <div class="grid--50-50">
-                              <label for="password2">Imagen de la categoría:</label>
+                              <label for="file">Imagen de la categoría:</label>
                             </div>
-                            <input required type="file" name="passwordConfirm" id="passwordConfirm">
-                            <span class="alertForm">Campo Obligatorio</span>
+                            <input required type="file" (change)="fileChange($event)" name="file" id="file">
                         </div>    
                         <div class="text-center">
                             <input type="submit"  value="Agregar">              
