--- a/Woo-ChapinFront/src/app/components/general/login/login.component.html
+++ b/Woo-ChapinFront/src/app/components/general/login/login.component.html
@@ -47,7 +47,7 @@
                       
                       <form id="stripe-login" #login= "ngForm" (ngSubmit)="onclick(login)">
                         <div class="field padding-bottom--24">
-                          <label for="email">Username:</label>
+                          <label for="userName">Username:</label>
                           <input required type="text" #userName="ngModel" [(ngModel)]="user.userName" name="userName" id="userName">
                           <span class="alertForm" *ngIf="!userName.valid && userName.touched">*Campo Obligatorio</span>
                         </div>
