--- a/Woo-ChapinFront/src/app/components/admin/categorias/cat-register/cat-register.component.css
+++ b/Woo-ChapinFront/src/app/components/admin/categorias/cat-register/cat-register.component.css
@@ -7,6 +7,7 @@
     position: relative;
     z-index: 2;
 }
+
 h2{
     color: #11346b;
 }
@@ -61,3 +62,7 @@ label {
 }
 
 
+.alertForm{
+    font-size: 15px;
+    color: #F93154;
+  }
